# dawgdic-rs

./: Cargo.toml  README.md
benches/: basic.rs
corpora/: 01_dawg_smoketest.txt
src/: dawg.rs  dictionary.rs  lib.rs  pool.rs  unit.rs
tests/: dawg_smoketest.rs
